# dude_rendering_engine

./: CMakeLists.txt  README.md
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  prefab_asset.h  texture_asset.cpp  texture_asset.h
assets/assets_export/: 1219024358953944284.tx  2051777328469649772.tx  2185409758123873465.tx  2299742237651021498.tx  2374361008830720677.tx  2411100444841994089.tx  2775690330959970771.tx  2969916736137545357.tx  332936164838540657.tx  3371964815757888145.tx  3455394979645218238.tx  3628158980083700836.tx  3827035219084910048.tx  4477655471536070370.tx  4601176305987539675.tx  466164707995436622.tx  4675343432951571524.tx  4871783166746854860.tx  4910669866631290573.tx  4975155472559461469.tx  5061699253647017043.tx  5792855332885324923.tx  5823059166183034438.tx  6047387724914829168.tx  6151467286084645207.tx  (+49 more)
dudu_engine/: CMakeLists.txt  material_system.cpp  player_camera.h  vk_engine_scenerender.cpp  vk_initializers.h  vk_mesh.cpp
extra-engine/: CMakeLists.txt  frustum_cull.h  logger.h  material_system.h  player_camera.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_mesh.h  vk_profiler.cpp  vk_profiler.h  vk_pushbuffer.cpp  vk_pushbuffer.h  vk_scene.cpp  vk_scene.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h
libs/: nvtt.exp  nvtt.lib
shaders/: depthReduce.comp  indirect_cull.comp  textured_lit.frag  tri_mesh_ssbo_instanced_shadowcast.vert
(+126 files in other folders)
